--- a/Index.html
+++ b/Index.html
@@ -19,22 +19,23 @@
     </p>
   </div>
 </header>
-
-<div class="carousel-container" aria-label="Main sections carousel">
-  <button class="arrow left" aria-label="Scroll left">&#8592;</button>
-  <div class="cards" role="list" aria-live="polite" aria-atomic="true">
-    <div class="card" role="listitem" tabindex="0" data-index="0">About Me</div>
-    <div class="card" role="listitem" tabindex="-1" data-index="1">Education</div>
-    <div class="card" role="listitem" tabindex="-1" data-index="2">Skills</div>
-    <div class="card" role="listitem" tabindex="-1" data-index="3">Projects</div>
-  </div>
-  <button class="arrow right" aria-label="Scroll right">&#8594;</button>
+<section class ="carousel-section">
+  <div class="carousel-container" aria-label="Main sections carousel">
+    <button class="arrow left" aria-label="Scroll left">&#8592;</button>
+    <div class="cards" role="list" aria-live="polite" aria-atomic="true">
+      <div class="card" role="listitem" tabindex="0" data-index="0">About Me</div>
+      <div class="card" role="listitem" tabindex="-1" data-index="1">Education</div>
+      <div class="card" role="listitem" tabindex="-1" data-index="2">Skills</div>
+      <div class="card" role="listitem" tabindex="-1" data-index="3">Projects</div>
+    </div>
+    <button class="arrow right" aria-label="Scroll right">&#8594;</button>
 </div>
-
+</section>
 <!-- Content sections -->
-<section class="content-section active" id="about" tabindex="0">
+<section class="content-section" id="about" tabindex="0">
   <h2>About Me</h2>
   <p>Web and Computer Programming student skilled in full-stack development (Node.js, MongoDB, OAuth) and frontend automation using Python, Selenium, and Docker. Passionate about creating clean, functional code and delivering real-world solutions.</p>
+  <img class="myself" src="images/me.jpg" alt="Myself" class="profile-image" loading="lazy" width="300px"/>
 </section>
 
 <section class="content-section" id="education" tabindex="0">
