--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-
+<!-- Portfolio -->
 <header>
   <h1>Dennis Almendarez</h1>
   <p>Web and Computer Programming Student | Full-Stack Developer</p>
