--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 <!-- Content sections -->
 <section class="content-section" id="about" tabindex="0">
   <h2>About Me</h2>
-  <p>Web and Computer Programming student skilled in full-stack development (Node.js, MongoDB, OAuth) and frontend automation using Python, Selenium, and Docker. Passionate about creating clean, functional code and delivering real-world solutions.</p>
+  <p>Web and Computer Programming student skilled in full-stack development (Node.js, MongoDB, OAuth) and 
+    frontend automation using Python, Selenium, and Docker. Passionate about creating clean, functional code 
+    and delivering real-world solutions. I like to read books, play games, and enjoy science fiction. 
+    I am a team player and like to learn new things. I also enjoy exploring new ideas, collaborating with 
+    others, and finding creative solutions. In my free time, I dive into sci-fi worlds, discover new games, 
+    and keep building my knowledge through curiosity and hands-on experiences.</p>
   <img class="myself" src="images/me.jpg" alt="Myself" class="profile-image" loading="lazy" width="300px"/>
 </section>
 
