--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <li><strong>Languages:</strong> Python, HTML, CSS, JavaScript, MySQL, C#</li>
     <li><strong>Frameworks/Tools:</strong> Node.js, Express, MongoDB, OAuth, Git, Render, Docker</li>
     <li><strong>Testing:</strong> Pytest, Selenium, Postman, coverage.py, Squash TM, Chrome DevTools</li>
-    <li><strong>Testing Techniques:</strong> Regression, Integration, Unit, Black/White Box, Load, Stress, Boundary Value, Fault Injection</li>
+    <li><strong>Testing Techniques:</strong> Regression, Integration, Unit, Load, Stress</li>
     <li><strong>Other:</strong> Bilingual (English & Spanish), Project Documentation, Microsoft Office Suite</li>
   </ul>
 </section>
